[ADD] @SuppressWarnings("restriction") to MarketWebServer class